# agentred

./: .gitignore  LICENSE  README.md  pyproject.toml
agentred/: __init__.py  cli.py  orchestrator.py
agentred/collect/: __init__.py  base.py  exa.py  himalayas.py  jobicy.py
agentred/map/: __init__.py  mapper.py  partitioner.py
agentred/reduce/: __init__.py  reducer.py
agentred/report/: __init__.py  generator.py
agentred/schemas/: __init__.py
docs/: agentred-operational-workflow-architecture.html  render_agentred_diagram.py
tests/: test_mapreduce.py  test_report.py  test_schemas.py
